Closed Bug 622558 Opened 15 years ago Closed 15 years ago

When .setCustomValidity() is used, :-moz-ui-invalid should always apply

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b10

People

(Reporter: mounir, Assigned: mounir)

References

()

Details

Attachments

(1 file)

1. Open the testcase (URL field), type 'foo'. 2. The input is now invalid but :-moz-ui-invalid doesn't apply. 3. Un-focus the text field: now :-moz-ui-invalid applies. Expected results: 2. should be "The input is invalid and :-moz-ui-invalid applies."
Attached patch Patch v1 — — Splinter Review
This patch makes :-moz-ui-invalid always apply when an element suffers from a custom validity. Actually, even if novalidate has been set. I don't know if that's what we want but I'm going to open a bug for novalidate so I will take a decision in this bug.
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #500836 - Flags: review?(jonas)
Whiteboard: [needs-review]
Whiteboard: [needs-review] → [needs-review][passed-try]
Attachment #500836 - Flags: review?(jonas)
Attachment #500836 - Flags: review+
Attachment #500836 - Flags: approval2.0+
Whiteboard: [needs-review][passed-try] → [needs-landing][passed-try]
I can't land this until bug 619278 is approved.
Depends on: 619278
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs-landing][passed-try]
Target Milestone: --- → mozilla2.0b10
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: