Bug 622558 - When .setCustomValidity() is used, :-moz-ui-invalid should always apply. r+a=sicking