content/html/content/src/nsHTMLInputElement.cpp
@@ -3310,8 +3310,9 @@ nsHTMLInputElement::IntrinsicState() const
     } else {
       state |= NS_EVENT_STATE_INVALID;
 
-      if (GET_BOOLBIT(mBitField, BF_CAN_SHOW_INVALID_UI) &&
-          ShouldShowInvalidUI()) {
+      if (GetValidityState(VALIDITY_STATE_CUSTOM_ERROR) ||
+          (GET_BOOLBIT(mBitField, BF_CAN_SHOW_INVALID_UI) &&
+           ShouldShowValidityUI())) {
         state |= NS_EVENT_STATE_MOZ_UI_INVALID;
       }
     }
@@ -3322,10 +3323,10 @@ nsHTMLInputElement::IntrinsicState() const
     // 2. The element is either valid or isn't allowed to have
     //    :-moz-ui-invalid applying ;
     // 3. The rules to have :-moz-ui-valid applying are fulfilled
-    //    (see ShouldShowValidUI()).
-    if (GET_BOOLBIT(mBitField, BF_CAN_SHOW_VALID_UI) &&
-        (IsValid() || !GET_BOOLBIT(mBitField, BF_CAN_SHOW_INVALID_UI)) &&
-        ShouldShowValidUI()) {
+    //    (see ShouldShowValidityUI()).
+    if (GET_BOOLBIT(mBitField, BF_CAN_SHOW_VALID_UI) && ShouldShowValidityUI() &&
+        (IsValid() || (!state.HasState(NS_EVENT_STATE_MOZ_UI_INVALID) &&
+                       !GET_BOOLBIT(mBitField, BF_CAN_SHOW_INVALID_UI)))) {
       state |= NS_EVENT_STATE_MOZ_UI_VALID;
     }
   }
@@ -4585,11 +4586,11 @@ nsHTMLInputElement::UpdateValidityUIBits(bool aIsFocused)
     // If the invalid UI is shown, we should show it while focusing (and
     // update). Otherwise, we should not.
     SET_BOOLBIT(mBitField, BF_CAN_SHOW_INVALID_UI,
-                !IsValid() && ShouldShowInvalidUI());
+                !IsValid() && ShouldShowValidityUI());
 
     // If neither invalid UI nor valid UI is shown, we shouldn't show the valid
     // UI while typing.
-    SET_BOOLBIT(mBitField, BF_CAN_SHOW_VALID_UI, ShouldShowValidUI());
+    SET_BOOLBIT(mBitField, BF_CAN_SHOW_VALID_UI, ShouldShowValidityUI());
   } else {
     SET_BOOLBIT(mBitField, BF_CAN_SHOW_INVALID_UI, PR_TRUE);
     SET_BOOLBIT(mBitField, BF_CAN_SHOW_VALID_UI, PR_TRUE);
